CLING: Have llvm & clang libraries available to other clients (including clang itself) without cling's changes affecting code generation.

--- a/lib/Transforms/IPO/CMakeLists.txt
+++ b/lib/Transforms/IPO/CMakeLists.txt
@@ -38,3 +38,7 @@ add_llvm_library(LLVMipo
   DEPENDS
   intrinsics_gen
   )
+
+if(CLING_CLANG_RUNTIME_PATCH)
+  add_definitions(-DCLING_CLANG_RUNTIME_PATCH)
+endif()
