Fix DynamicLibrary symbol lookup on Windows and leakage across all platforms.

--- a/unittests/Support/CMakeLists.txt
+++ b/unittests/Support/CMakeLists.txt
@@ -57,3 +57,5 @@ add_llvm_unittest(SupportTests
 
 # ManagedStatic.cpp uses <pthread>.
 target_link_libraries(SupportTests ${PTHREAD_LIB})
+
+add_subdirectory(DynamicLibrary)
